@@ -1,7 +1,7 @@
 <metadata>
-  <version>13</version>
+  <version>14</version>
   <dependencies>
-        <dependency>profile-jcu.theme:default</dependency>
+        <dependency>profile-Products.CMFPlacefulWorkflow:default</dependency>
         <dependency>profile-plone.app.dexterity:default</dependency>
         <dependency>profile-plone.app.iterate:plone.app.iterate</dependency>
         <dependency>profile-collective.z3cform.datagridfield:default</dependency>
