@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_properties" meta_type="Plone Properties Tool">
+ <object name="site_properties" meta_type="Plone Property Sheet">
+   <property name="enable_checkout_workflow" type="boolean">True</property>
+   <property name="checkout_workflow_policy"
+         type="string">checkout_workflow_policy</property>
+ </object>
+</object>
