@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<object name="portal_workflow" meta_type="Plone Workflow Tool">
+ <object name="tdh_dataset_record_checkout_workflow" meta_type="Workflow"/>
+ <object name="tdh_dataset_record_workflow" meta_type="Workflow"/>
+ <bindings>
+  <default>
+   <bound-workflow workflow_id="simple_publication_workflow"/>
+  </default>
+  <type type_id="tdh.metadata.datasetrecord">
+   <bound-workflow workflow_id="tdh_dataset_record_workflow"/>
+  </type>
+ </bindings>
+</object>
